--- a/package.json
+++ b/package.json
@@ -1,24 +1,22 @@
 {
-  "name": "getwellsooner",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "name": "vite-react-ts",
+  "private": true,
+  "version": "0.0.0",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "start": "vite",
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "expo": "~48.0.10",
-    "expo-status-bar": "~1.4.4",
-    "react": "18.2.0",
-    "react-native": "0.71.6",
-    "react-native-web": "~0.18.10",
-    "react-dom": "18.2.0",
-    "@expo/webpack-config": "^18.0.1"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
-  },
-  "private": true
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.11",
+    "@vitejs/plugin-react": "^2.0.1",
+    "typescript": "^4.7.4",
+    "vite": "^3.0.9"
+  }
 }
