--- a/package.json
+++ b/package.json
@@ -18,15 +18,26 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@babel/preset-env": "7.1.6",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/core": "3.0.0",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
     "expo": "^44.0.0",
     "expo-status-bar": "~1.2.0",
-    "native-base": "3.4.0",
+    "install-peers": "^1.0.4",
+    "native-base": "^3.4.28",
+    "prop-types": "^15.8.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-gesture-handler": "~2.1.0",
+    "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
     "react-native-svg": "12.1.1",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
