--- a/package.json
+++ b/package.json
@@ -19,34 +19,35 @@
   },
   "dependencies": {
     "@babel/preset-env": "7.1.6",
-    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@expo/webpack-config": "^18.0.1",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/core": "3.0.0",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
-    "expo": "^44.0.0",
-    "expo-status-bar": "~1.2.0",
+    "expo": "^48.0.0",
+    "expo-status-bar": "~1.4.4",
     "install-peers": "^1.0.4",
     "native-base": "^3.4.28",
     "prop-types": "^15.8.1",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.71.3",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "~2.1.0",
-    "react-native-reanimated": "~2.3.1",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.10.1",
-    "react-native-svg": "12.1.1",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-svg": "13.4.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "0.17.1",
+    "react-native-web": "~0.18.11",
     "react-navigation": "^4.4.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@types/react": "~17.0.21",
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.0.27",
     "@types/react-native": "~0.64.12",
-    "typescript": "~4.3.5"
+    "typescript": "^4.9.4"
   },
   "bugs": {
     "url": "https://github.com/GeekyAnts/nativebase-templates/issues"
