--- a/package.json
+++ b/package.json
@@ -15,7 +15,22 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
+    ],
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "**/*.{js,jsx}",
+      "!**/coverage/**",
+      "!**/node_modules/**",
+      "!**/babel.config.js",
+      "!**/jest.setup.js"
+    ]
   },
   "dependencies": {
     "@babel/preset-env": "7.1.6",
@@ -25,9 +40,12 @@
     "@react-navigation/core": "3.0.0",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "@types/react-test-renderer": "^18.0.0",
     "expo": "^48.0.0",
     "expo-status-bar": "~1.4.4",
     "install-peers": "^1.0.4",
+    "jest": "^29.2.1",
+    "jest-expo": "^48.0.2",
     "native-base": "^3.4.28",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
@@ -41,10 +59,12 @@
     "react-native-svg": "13.4.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.11",
-    "react-navigation": "^4.4.4"
+    "react-navigation": "^4.4.4",
+    "react-test-renderer": "^18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/jest": "^29.5.1",
     "@types/react": "~18.0.27",
     "@types/react-native": "~0.64.12",
     "typescript": "^4.9.4"
